# Noter

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/: manifest.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: fs.rs  meta.rs  mod.rs
src/bridge/: file-system.pwa.ts  file-system.tauri.ts  index.ts  tauri-commands.ts  tauri-sync.ts  types.ts
src/core/: event-bus.ts  index.ts  kernel.context.tsx  kernel.ts  slot-registry.ts  types.ts
src/core/plugin/: bridge-client.ts  bridge-host.ts  context.ts  index.ts  manager.ts  manifest.ts  permissions.ts
src/features/calculator/: index.ts
src/features/canvas/: canvas.store.ts  index.ts
src/features/export/: index.ts
src/features/notes/: events.ts  index.ts  note.store.ts  page-sizes.ts  types.ts
src/features/pdf/: index.ts  pdf.store.ts  pdfWorker.ts  types.ts
src/features/settings/: index.ts  settings.store.ts  theme.store.ts  themes.ts
src/features/sidebar/: index.ts  sidebar.store.ts
src/features/tabs/: index.ts  tab.store.ts  types.ts
src/hooks/: useBreakpoint.ts
src/shell/: ActivityBar.store.ts  ActivityBar.tsx  AppShell.tsx  DesktopLayout.tsx  ErrorBoundary.tsx  KernelSlot.tsx  MobileLayout.tsx  ThemeApplier.tsx  TitleBar.tsx  component-registry.ts
(+51 files in other folders)
